cbits/Bullet.h

void btRigidBody_addConstraintRef(void *c,void* p0); //method: addConstraintRef void ( ::btRigidBody::* )( ::btTypedConstraint * ) 
void btRigidBody_setLinearVelocity(void *c,float* p0); //method: setLinearVelocity void ( ::btRigidBody::* )( ::btVector3 const & ) 
int btRigidBody_isInWorld(void *c); //method: isInWorld bool ( ::btRigidBody::* )(  ) const
void btRigidBody_getTotalTorque(void *c,float* ret); //method: getTotalTorque ::btVector3 const & ( ::btRigidBody::* )(  ) const
int btRigidBody_getNumConstraintRefs(void *c); //method: getNumConstraintRefs int ( ::btRigidBody::* )(  ) const
float btRigidBody_computeAngularImpulseDenominator(void *c,float* p0); //method: computeAngularImpulseDenominator ::btScalar ( ::btRigidBody::* )( ::btVector3 const & ) const
void btRigidBody_getInvInertiaTensorWorld(void *c,float* ret); //method: getInvInertiaTensorWorld ::btMatrix3x3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getDeltaAngularVelocity(void *c,float* ret); //method: getDeltaAngularVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_internalGetDeltaLinearVelocity(void *c,float* ret); //method: internalGetDeltaLinearVelocity ::btVector3 & ( ::btRigidBody::* )(  ) 
float btRigidBody_computeImpulseDenominator(void *c,float* p0,float* p1); //method: computeImpulseDenominator ::btScalar ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 const & ) const
void* btRigidBody_getConstraintRef(void *c,int p0); //method: getConstraintRef ::btTypedConstraint * ( ::btRigidBody::* )( int ) 
float btRigidBody_getAngularDamping(void *c); //method: getAngularDamping ::btScalar ( ::btRigidBody::* )(  ) const
void btRigidBody_internalGetTurnVelocity(void *c,float* ret); //method: internalGetTurnVelocity ::btVector3 & ( ::btRigidBody::* )(  ) 
void btRigidBody_proceedToTransform(void *c,float* p0); //method: proceedToTransform void ( ::btRigidBody::* )( ::btTransform const & ) 
void btRigidBody_setInvInertiaDiagLocal(void *c,float* p0); //method: setInvInertiaDiagLocal void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_getInvInertiaDiagLocal(void *c,float* ret); //method: getInvInertiaDiagLocal ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getCenterOfMassTransform(void *c,float* ret); //method: getCenterOfMassTransform ::btTransform const & ( ::btRigidBody::* )(  ) const
void btRigidBody_removeConstraintRef(void *c,void* p0); //method: removeConstraintRef void ( ::btRigidBody::* )( ::btTypedConstraint * ) 
void btRigidBody_getAngularFactor(void *c,float* ret); //method: getAngularFactor ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getLinearVelocity(void *c,float* ret); //method: getLinearVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
int btRigidBody_getFlags(void *c); //method: getFlags int ( ::btRigidBody::* )(  ) const
void btRigidBody_internalGetVelocityInLocalPointObsolete(void *c,float* p0,float* p1); //method: internalGetVelocityInLocalPointObsolete void ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 & ) const
float btRigidBody_getLinearDamping(void *c); //method: getLinearDamping ::btScalar ( ::btRigidBody::* )(  ) const