Physics/Bullet/Raw/BulletDynamics/Dynamics.chs

{#fun btRigidBody_addConstraintRef as btRigidBody_addConstraintRef    `( BtRigidBodyClass bc , BtTypedConstraintClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ c
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#356>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setLinearVelocity as btRigidBody_setLinearVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ lin_vel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#356>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setLinearVelocity as btRigidBody_setLinearVelocity'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ lin_vel
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#492>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_isInWorld as btRigidBody_isInWorld    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#278>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getTotalTorque as btRigidBody_getTotalTorque    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#507>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getNumConstraintRefs as btRigidBody_getNumConstraintRefs    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#399>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_computeAngularImpulseDenominator as btRigidBody_computeAngularImpulseDenominator    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ axis
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#399>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_computeAngularImpulseDenominator as btRigidBody_computeAngularImpulseDenominator'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ axis
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#260>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getInvInertiaTensorWorld as btRigidBody_getInvInertiaTensorWorld    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaMat3-  `Mat3'  peekMat3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#527>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getDeltaAngularVelocity as btRigidBody_getDeltaAngularVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#546>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalGetDeltaLinearVelocity as btRigidBody_internalGetDeltaLinearVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#387>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_computeImpulseDenominator as btRigidBody_computeImpulseDenominator    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ pos
, withVec3* `Vec3'  peekVec3* -- ^ normal
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#387>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_computeImpulseDenominator as btRigidBody_computeImpulseDenominator'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ pos
, allocaVec3-  `Vec3'  peekVec3* -- ^ normal
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#502>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getConstraintRef as btRigidBody_getConstraintRef    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtTypedConstraint'  mkBtTypedConstraint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#223>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getAngularDamping as btRigidBody_getAngularDamping    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#571>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalGetTurnVelocity as btRigidBody_internalGetTurnVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#185>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_proceedToTransform as btRigidBody_proceedToTransform    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ newTrans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#185>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_proceedToTransform as btRigidBody_proceedToTransform'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ newTrans
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#288>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setInvInertiaDiagLocal as btRigidBody_setInvInertiaDiagLocal    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ diagInvInertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#288>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_setInvInertiaDiagLocal as btRigidBody_setInvInertiaDiagLocal'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ diagInvInertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#283>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getInvInertiaDiagLocal as btRigidBody_getInvInertiaDiagLocal    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#345>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getCenterOfMassTransform as btRigidBody_getCenterOfMassTransform    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#500>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_removeConstraintRef as btRigidBody_removeConstraintRef    `( BtRigidBodyClass bc , BtTypedConstraintClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ c
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#486>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getAngularFactor as btRigidBody_getAngularFactor    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#348>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getLinearVelocity as btRigidBody_getLinearVelocity    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#517>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getFlags as btRigidBody_getFlags    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#576>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalGetVelocityInLocalPointObsolete as btRigidBody_internalGetVelocityInLocalPointObsolete    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ rel_pos
, withVec3* `Vec3'  peekVec3* -- ^ velocity
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#576>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_internalGetVelocityInLocalPointObsolete as btRigidBody_internalGetVelocityInLocalPointObsolete'    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ rel_pos
, allocaVec3-  `Vec3'  peekVec3* -- ^ velocity
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.h?r=2223#218>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Dynamics/btRigidBody.cpp?r=2223>
-}
{#fun btRigidBody_getLinearDamping as btRigidBody_getLinearDamping    `( BtRigidBodyClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
